--- a/html/sound_effect.html
+++ b/html/sound_effect.html
@@ -1,36 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/style_index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    <title>Featured Music | Epidemic Sound</title>
-</head>
-<body>
-    <div class="header">
-        <div class="header--logo">
-            <i class="fa-solid fa-music"></i><span> Epidemic Sound</span>
-        </div>
-        <div class="header--menu">
-            <ul class="nav_menu">
-              <li class="menu_items"><a class="active" href="index.html">Music</a></li>
-              <li class="menu_items"><a href="sound_effect.html">Sound Effects</a></li>
-              <li class="menu_items"><a href="license_model.html">License Model</a></li>
-              <li class="menu_items"><a href="pricing.html">Pricing</a></li>
-              <li class="menu_items"><a href="login.html">Log in</a></li>
-              <li class="menu_items-icon"><i class="fa-solid fa-magnifying-glass fa-lg"></i></li>
-            </ul>
-        </div>
-        <div class="header--preimere">
-          <div class="btnPremiere">
-            <p class="txt_premiere">Start free trial</p>
-          </div>
-        </div>  
-    </div>
-    <div class="body1"></div>
 
-    <!-- script for all -->
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/css/style_sound_effect.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+  <title>Featured Music | Epidemic Sound</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+  />
+</head>
+
+<body>
+  <div class="header">
+    <div class="header--logo">
+      <i class="fa-solid fa-music"></i><span> Epidemic Sound</span>
+    </div>
+    <div class="header--menu">
+      <ul class="nav_menu">
+        <li class="menu_items"><a class="active" href="index.html">Music</a></li>
+        <li class="menu_items"><a href="sound_effect.html">Sound Effects</a></li>
+        <li class="menu_items"><a href="license_model.html">License Model</a></li>
+        <li class="menu_items"><a href="pricing.html">Pricing</a></li>
+        <li class="menu_items"><a href="login.html">Log in</a></li>
+        <li class="menu_items-icon"><i class="fa-solid fa-magnifying-glass fa-lg"></i></li>
+      </ul>
+    </div>
+    <div class="header--preimere">
+      <div class="btnPremiere">
+        <p class="txt_premiere">Start free trial</p>
+      </div>
+    </div>
+  </div>
+  <div class="body1">
+    <div class="text">
+      <h1>Royalty Free Sound Effects</h1>
+      <p class="content">Looking for a whoosh, cartoon or ghost sound effect for your YouTube video? Discover our
+        extensive
+        catalog of royalty-free sound effects. Bring your content to life with premium sound design.
+      </p>
+      <p class="sub-content">Enjoy unlimited use on all your channels with a subscription.</p>
+      <a class="cover">
+        <span class""button></span>Start free trial</span>
+      </a>
+    </div>
+  </div>
+
+  <!-- script for all -->
 </body>
+
 </html>
