xong duoc nua phan trang chu

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,8 @@
     <title>Featured Music | Epidemic Sound</title>
 </head>
 <body>
+
+    <!-- menu in header -->
     <div class="header">
         <div class="header--logo">
             <i class="fa-solid fa-music"></i><span> Epidemic Sound</span>
@@ -16,10 +18,10 @@
         <div class="header--menu">
             <ul class="nav_menu">
               <li class="menu_items"><a class="active" href="index.html">Music</a></li>
-              <li class="menu_items"><a href="sound_effect.html">Sound Effects</a></li>
-              <li class="menu_items"><a href="license_model.html">License Model</a></li>
-              <li class="menu_items"><a href="pricing.html">Pricing</a></li>
-              <li class="menu_items"><a href="login.html">Log in</a></li>
+              <li class="menu_items"><a class="menu_items_color" href="sound_effect.html">Sound Effects</a></li>
+              <li class="menu_items"><a class="menu_items_color" href="license_model.html">License Model</a></li>
+              <li class="menu_items"><a class="menu_items_color" href="pricing.html">Pricing</a></li>
+              <li class="menu_items"><a class="menu_items_color" href="login.html">Log in</a></li>
               <li class="menu_items-icon"><i class="fa-solid fa-magnifying-glass fa-lg"></i></li>
             </ul>
         </div>
@@ -29,7 +31,97 @@
           </div>
         </div>  
     </div>
-    <div class="body1"></div>
+
+    <!-- menu 2 -->
+    <div class="tabList">
+      <div class="tabList_menu">
+        <ul class="list_menu">
+          <li class="list_items"><a class="active" href="#">Featured</a></li>
+          <li class="list_items"><a class="list_items_color" href="#">Genres</a></li>
+          <li class="list_items"><a class="list_items_color" href="#">Moods</a></li>
+          <li class="list_items"><a class="list_items_color" href="#">Themes</a></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- layout for album music  -->
+    <div class="album_music">
+      <p>Featured playlists & themes</p>
+      <div class="grid_album">
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo1.jpeg" alt="">
+          <p>Now Trending</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo2.jpeg" alt="">
+          <p>Women's Month</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo3.jpeg" alt="">
+          <p>Creator's Picks</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo4.jpeg" alt="">
+          <p>Ads, Promos & Trailers</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo5.jpeg" alt="">
+          <p>Cinematic</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo6.jpeg" alt="">
+          <p>Corporate</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo7.jpeg" alt="">
+          <p>Fashion & Beauty</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo8.jpeg" alt="">
+          <p>Gaming</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo9.jpeg" alt="">
+          <p>Travel</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo10.jpeg" alt="">
+          <p>Sports & Action</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo11.jpeg" alt="">
+          <p>Vlogs</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo12.jpeg" alt="">
+          <p>Workout & Wellness</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- layout list music staff picks -->
+    <div class="list_staff_picks">
+      <div class="list_logo">
+        <img src="../assets/images/images_index/staff_pick.jpeg" alt="">
+        <div class="list_text">
+          <p class="p1">Staff Picks</p>
+          <p class="p2">Over favorite tracks right now -- updated weekly</p>
+        </div>
+      </div>
+      <div class="list_music">
+        <div class="list_music_items">
+          
+        </div>
+        <div class="list_music_items"></div>
+        <div class="list_music_items"></div>
+        <div class="list_music_items"></div>
+        <div class="list_music_items"></div>
+        <div class="list_music_items"></div>
+        <div class="list_music_items"></div>
+        <div class="list_music_items"></div>
+      </div>
+    </div>
+
 
     <!-- script for all -->
 </body>
