Phan dau cảu liscen

--- a/html/license_model.html
+++ b/html/license_model.html
@@ -49,7 +49,7 @@
         </div> 
     </div>
     <div class="box_item2">
-        <img src="../assets/images/images_license_model/img1.png" alt="">
+        <img src="../assets/images/images_license_model/img1.png" alt="" width="720px" height="704px">
     </div>
 </div>
 
