--- a/html/sound_effect.html
+++ b/html/sound_effect.html
@@ -43,13 +43,92 @@
         catalog of royalty-free sound effects. Bring your content to life with premium sound design.
       </p>
       <p class="sub-content">Enjoy unlimited use on all your channels with a subscription.</p>
-      <a class="cover">
-        <span class""button></span>Start free trial</span>
-      </a>
+    </div>
+    <div class="cover">
+      <p class="button">Start free trial</p>
     </div>
   </div>
+  <!-- layout for SoundEffects  -->
+  <div class="body2">
+    <p>Featured sound effects</p>
+    <div class="SoundEffects">
+      <div class="Effects">
+        <div class="items">
+          <<img src="../assets/images/images_sound_effect/img1.jpg" alt="">
+          <p>Cartoon</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img2.jpg" alt="">
+          <p>Whoosh</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img3.jpg" alt="">
+          <p>Footsteps</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img4.jpg" alt="">
+          <p>Props</p>
+        </div>
+        <div class="items">
+          <<img src="../assets/images/images_sound_effect/img5.jpg" alt="">
+          <p>Ambience</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img6.jpg" alt="">
+          <p>Whips</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img7.jpg" alt="">
+          <p>Stings</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img8.jpg" alt="">
+          <p>Musical</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img9.jpg" alt="">
+          <p>Waves</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img10.jpg" alt="">
+          <p>Computers</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img11.jpg" alt="">
+          <p>Weather</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img12.jpg" alt="">
+          <p>Mordern Cars</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img13.jpg" alt="">
+          <p>Applause</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img14.jpg" alt="">
+          <p>Bells</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img15.jpg" alt="">
+          <p>Sports</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img16.jpg" alt="">
+          <p>User interface</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img17.jpg" alt="">
+          <p>Water</p>
+        </div>
+        <div class="items">
+          <img src="../assets/images/images_sound_effect/img18.jpg" alt="">
+          <p>Fire</p>
+        </div>
+      </div>
+    </div>
 
-  <!-- script for all -->
+    <!-- script for all -->
 </body>
 
 </html>
