--- a/html/sound_effect.html
+++ b/html/sound_effect.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
   />
 </head>
 
@@ -55,7 +58,7 @@
       <div class="Effects">
         <div class="items">
           <<img src="../assets/images/images_sound_effect/img1.jpg" alt="">
-          <p>Cartoon</p>
+            <p>Cartoon</p>
         </div>
         <div class="items">
           <img src="../assets/images/images_sound_effect/img2.jpg" alt="">
@@ -71,7 +74,7 @@
         </div>
         <div class="items">
           <<img src="../assets/images/images_sound_effect/img5.jpg" alt="">
-          <p>Ambience</p>
+            <p>Ambience</p>
         </div>
         <div class="items">
           <img src="../assets/images/images_sound_effect/img6.jpg" alt="">
