duy da xong phan trang chu

--- a/html/index.html
+++ b/html/index.html
@@ -104,24 +104,460 @@
       <div class="list_logo">
         <img src="../assets/images/images_index/staff_pick.jpeg" alt="">
         <div class="list_text">
-          <p class="p1">Staff Picks</p>
+          <p class="p1" >Staff Picks</p>
           <p class="p2">Over favorite tracks right now -- updated weekly</p>
         </div>
       </div>
       <div class="list_music">
         <div class="list_music_items">
-          
+          <div class="music_items_btnPlay">
+            <i class="fa-solid fa-circle-play fa-3x"></i>
+          </div>
+          <div class="music_items_nameOfSong">
+            <p class="p1 p1--head">SHOP</p>
+            <p class="p2 p2--under">Zorro</p>
+          </div>
+          <div class="music_items_singer">
+            <p class="p2 p2--under">Epic, Restless</p>
+          </div>
+          <div class="music_items_typeOfSong">
+            <p class="p2 p2--under">Beat, 2020s Pop</p>
+          </div>
+          <div class="music_items_lyricLogo">
+            <i class="fa-solid fa-microphone fa-lg"></i>
+          </div>
+          <div class="music_items_time">
+            <p class="p2 p2--under">2:23</p>
+          </div>
+          <div class="music_items_utilities">
+            <ul class="utilities">
+              <li class="utilities_items"><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-share"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-circle"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-plus fa-xl"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-arrow-down"></i></li>
+            </ul>
+          </div>
         </div>
-        <div class="list_music_items"></div>
-        <div class="list_music_items"></div>
-        <div class="list_music_items"></div>
-        <div class="list_music_items"></div>
-        <div class="list_music_items"></div>
-        <div class="list_music_items"></div>
-        <div class="list_music_items"></div>
+        <div class="list_music_items">
+          <div class="music_items_btnPlay">
+            <i class="fa-solid fa-circle-play fa-3x"></i>
+          </div>
+          <div class="music_items_nameOfSong">
+            <p class="p1 p1--head">Kerre</p>
+            <p class="p2 p2--under">Amaroo</p>
+          </div>
+          <div class="music_items_singer">
+            <p class="p2 p2--under">Happy, Laid Back</p>
+          </div>
+          <div class="music_items_typeOfSong">
+            <p class="p2 p2--under">Afrobeats</p>
+          </div>
+          <div class="music_items_lyricLogo">
+            <i class="fa-solid fa-microphone fa-lg"></i>
+          </div>
+          <div class="music_items_time">
+            <p class="p2 p2--under">2:18</p>
+          </div>
+          <div class="music_items_utilities">
+            <ul class="utilities">
+              <li class="utilities_items"><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-share"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-circle"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-plus fa-xl"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-arrow-down"></i></li>
+            </ul>
+          </div>
+        </div>
+        <div class="list_music_items">
+          <div class="music_items_btnPlay">
+            <i class="fa-solid fa-circle-play fa-3x"></i>
+          </div>
+          <div class="music_items_nameOfSong">
+            <p class="p1 p1--head">cold blooded</p>
+            <p class="p2 p2--under">dasloe</p>
+          </div>
+          <div class="music_items_singer">
+            <p class="p2 p2--under">Hopeful, Busy & Frantic</p>
+          </div>
+          <div class="music_items_typeOfSong">
+            <p class="p2 p2--under">K-pop</p>
+          </div>
+          <div class="music_items_lyricLogo">
+            <i class="fa-solid fa-microphone fa-lg"></i>
+          </div>
+          <div class="music_items_time">
+            <p class="p2 p2--under">2:53</p>
+          </div>
+          <div class="music_items_utilities">
+            <ul class="utilities">
+              <li class="utilities_items"><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-share"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-circle"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-plus fa-xl"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-arrow-down"></i></li>
+            </ul>
+          </div>
+        </div>
+        <div class="list_music_items">
+          <div class="music_items_btnPlay">
+            <i class="fa-solid fa-circle-play fa-3x"></i>
+          </div>
+          <div class="music_items_nameOfSong">
+            <p class="p1 p1--head">Top Tier</p>
+            <p class="p2 p2--under">Tilden Parc</p>
+          </div>
+          <div class="music_items_singer">
+            <p class="p2 p2--under">Angry, Restless</p>
+          </div>
+          <div class="music_items_typeOfSong">
+            <p class="p2 p2--under">Alternative Hip Hop</p>
+          </div>
+          <div class="music_items_lyricLogo">
+            <i class="fa-solid fa-microphone fa-lg"></i>
+          </div>
+          <div class="music_items_time">
+            <p class="p2 p2--under">3:28</p>
+          </div>
+          <div class="music_items_utilities">
+            <ul class="utilities">
+              <li class="utilities_items"><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-share"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-circle"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-plus fa-xl"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-arrow-down"></i></li>
+            </ul>
+          </div>
+        </div>
+        <div class="list_music_items">
+          <div class="music_items_btnPlay">
+            <i class="fa-solid fa-circle-play fa-3x"></i>
+          </div>
+          <div class="music_items_nameOfSong">
+            <p class="p1 p1--head">From the Ashes of a Previous life</p>
+            <p class="p2 p2--under">Lama House</p>
+          </div>
+          <div class="music_items_singer">
+            <p class="p2 p2--under">Dreamy, Sentimental</p>
+          </div>
+          <div class="music_items_typeOfSong">
+            <p class="p2 p2--under">Dramatic Classical, Small Drama</p>
+          </div>
+          <div class="music_items_lyricLogo">
+            <i class="fa-solid fa-microphone fa-lg"></i>
+          </div>
+          <div class="music_items_time">
+            <p class="p2 p2--under">2:22</p>
+          </div>
+          <div class="music_items_utilities">
+            <ul class="utilities">
+              <li class="utilities_items"><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-share"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-circle"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-plus fa-xl"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-arrow-down"></i></li>
+            </ul>
+          </div>
+        </div>
+        <div class="list_music_items">
+          <div class="music_items_btnPlay">
+            <i class="fa-solid fa-circle-play fa-3x"></i>
+          </div>
+          <div class="music_items_nameOfSong">
+            <p class="p1 p1--head">Lost in Your Paradise</p>
+            <p class="p2 p2--under">Swif7</p>
+          </div>
+          <div class="music_items_singer">
+            <p class="p2 p2--under">Epic, Mysterious</p>
+          </div>
+          <div class="music_items_typeOfSong">
+            <p class="p2 p2--under">Future Bass</p>
+          </div>
+          <div class="music_items_lyricLogo">
+            <i class="fa-solid fa-microphone fa-lg"></i>
+          </div>
+          <div class="music_items_time">
+            <p class="p2 p2--under">3:05</p>
+          </div>
+          <div class="music_items_utilities">
+            <ul class="utilities">
+              <li class="utilities_items"><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-share"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-circle"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-plus fa-xl"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-arrow-down"></i></li>
+            </ul>
+          </div>
+        </div>
+        <div class="list_music_items">
+          <div class="music_items_btnPlay">
+            <i class="fa-solid fa-circle-play fa-3x"></i>
+          </div>
+          <div class="music_items_nameOfSong">
+            <p class="p1 p1--head">Getting Frisky</p>
+            <p class="p2 p2--under">John Runefelt</p>
+          </div>
+          <div class="music_items_singer">
+            <p class="p2 p2--under">Laid Back, Restless</p>
+          </div>
+          <div class="music_items_typeOfSong">
+            <p class="p2 p2--under">Funk</p>
+          </div>
+          <div class="music_items_lyricLogo">
+            <i class="fa-solid fa-microphone fa-lg"></i>
+          </div>
+          <div class="music_items_time">
+            <p class="p2 p2--under">2:51</p>
+          </div>
+          <div class="music_items_utilities">
+            <ul class="utilities">
+              <li class="utilities_items"><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-share"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-circle"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-plus fa-xl"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-arrow-down"></i></li>
+            </ul>
+          </div>
+        </div>
+        <div class="list_music_items">
+          <div class="music_items_btnPlay">
+            <i class="fa-solid fa-circle-play fa-3x"></i>
+          </div>
+          <div class="music_items_nameOfSong">
+            <p class="p1 p1--head">Too Late to Meet Up</p>
+            <p class="p2 p2--under">House of Say</p>
+          </div>
+          <div class="music_items_singer">
+            <p class="p2 p2--under">Happy, Restless</p>
+          </div>
+          <div class="music_items_typeOfSong">
+            <p class="p2 p2--under">Dance</p>
+          </div>
+          <div class="music_items_lyricLogo">
+            <i class="fa-solid fa-microphone fa-lg"></i>
+          </div>
+          <div class="music_items_time">
+            <p class="p2 p2--under">3:08</p>
+          </div>
+          <div class="music_items_utilities">
+            <ul class="utilities">
+              <li class="utilities_items"><i class="fa-solid fa-cart-shopping"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-share"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-circle"></i></li>
+              <li class="utilities_items"><i class="fa-regular fa-plus fa-xl"></i></li>
+              <li class="utilities_items"><i class="fa-solid fa-arrow-down"></i></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
+    <!-- layout new releases -->
+    <div class="album_music">
+      <p>New Releases</p>
+      <div class="grid_album">
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo13.jpg" alt="">
+          <p>Too Late to Meet Up</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo14.jpg" alt="">
+          <p>
+            8-Bit Sheriff</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo15.jpg" alt="">
+          <p>
+            Main Character Energy</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo16.jpg" alt="">
+          <p>La 2is</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo17.jpg" alt="">
+          <p>Kalpa</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo18.jpg" alt="">
+          <p>Radiance</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo19.jpg" alt="">
+          <p>I Go Show You</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo20.jpg" alt="">
+          <p>Cold Blooded</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo21.jpg" alt="">
+          <p>UV Dimension</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo22.jpg" alt="">
+          <p>Cotton Candy Armor</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo23.jpg" alt="">
+          <p>Shop</p>
+        </div>
+        <div class="grid_items">
+          <img src="../assets/images/images_index/logo24.jpg" alt="">
+          <p>Scenes from a Pilgrim's</p>
+        </div>
+      </div>
+      <div class="btn_viewLast">
+        <div class="btn_view">
+          View all lastest tracks
+        </div>
+      </div>
+    </div>
+    
+    <!-- layout for pricing -->
+    <div class="pricing">
+      <p>Pricing</p>
+      <div class="grid_price">
+        <div class="grid_items_pricing">
+          <p class="pricing--p">Personal</p>
+          <div class="pricing_title">
+            <span class="title_money">$12</span><div class="title_month">/month*</div>
+          </div>
+          <div class="pricing_benefit">
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><span class="benefit_items">Unlimited downloads</span>
+            </div>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><div class="benefit_items">YouTube, Facebook, TikTok, Instagram, Twitch, podcasts</div>
+            </div>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><div class="benefit_items">Monetize on one channel per platform</div>
+            </div>
+          </div>
+          <div class="pricing_note">
+            <p>*When you pay $144/year upfront for one year. Otherwise $15 monthly.</p>
+          </div>
+          <div class="pricing_note2">
+            <div class="btnPremiere" style="margin-top: 15px;">
+              <p class="txt_premiere">Start free trial</p>
+            </div>
+            <div class="btn_learnMore">
+              <div class="style_btn">
+                <p>Learn more</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="grid_items_pricing">
+          <p class="pricing--p">Commercial</p>
+          <div class="pricing_title">
+            <span class="title_money">$25</span><div class="title_month">/month*</div>
+          </div>
+          <div class="pricing_benefit">
+            <p>Everything in Personal, plus:</p>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><span class="benefit_items">Covered for social media, online platforms and websites</span>
+            </div>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><div class="benefit_items">Publish content for your clients and business</div>
+            </div>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><div class="benefit_items">Unlimited use in digital ads</div>
+            </div>
+          </div>
+          <div class="pricing_note">
+            <p>*When you pay $299/year upfront for one year. Otherwise $49 monthly.</p>
+          </div>
+          <div class="pricing_note2">
+            <div class="btnPremiere" style="margin-top: 15px;">
+              <p class="txt_premiere">Start free trial</p>
+            </div>
+            <div class="btn_learnMore">
+              <div class="style_btn">
+                <p>Learn more</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="grid_items_pricing">
+          <p class="pricing--p">Enterprise</p>
+          <div class="pricing_title">
+            <span class="title_money" style="font-size: 40px;">Request a quote</span><div class="title_month"></div>
+          </div>
+          <div class="pricing_benefit">
+            <p>Everything in Commercial, plus:</p>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><span class="benefit_items">Multiple user accounts</span>
+            </div>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><div class="benefit_items">All rights covered for TV shows and ads</div>
+            </div>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><div class="benefit_items">Customer Success manager and music curation</div>
+            </div>
+            <div>
+              <span><i class="fa-solid fa-check fa-lg"></i></span><div class="benefit_items">Customized deal terms</div>
+            </div>
+          </div>
+          <div class="pricing_note">
+
+          </div>
+          <div class="pricing_note2" style="margin-top: 10px;">
+            <div class="btnPremiere" style="margin-top: 15px;">
+              <p class="txt_premiere">Start free trial</p>
+            </div>
+            <div class="btn_learnMore">
+              <div class="style_btn">
+                <p>Learn more</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- layout for end web -->
+    <div class="web_end">
+      <div class="layout1">
+        <div class="social_network">
+          <div class="social_network1">
+            <li>Music</li>
+            <li>Sound Effects</li>
+            <li>For Artists</li>
+            <li>In-Store Music</li>
+            <li>Blog</li>
+            <li>Help</li>
+          </div>
+          <div class="social_network1">
+            <li>Pricing</li>
+            <li>Enterprise</li>
+            <li>Press</li>
+            <li>Careers</li>
+            <li>Community</li>
+          </div>
+          <div class="social_network1">
+            <li>Spotify</li>
+            <li>Youtube</li>
+            <li>Instagram</li>
+            <li>Facebook</li>
+            <li>Twitter</li>
+          </div>
+        </div>
+        <div class="credit">
+          <div class="credit1">
+            <p>Copyright © Epidemic Sound</p>
+          </div>
+          <div class="credit2">
+            <li>Privacy</li>
+            <li>Genaral</li>
+            <li>Cookie</li>
+          </div>
+        </div>
+      </div>
+      <div class="layout2">
+
+      </div>
+    </div>
 
     <!-- script for all -->
 </body>
