--- a/html/license_model.html
+++ b/html/license_model.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,15 @@
     <link rel="stylesheet" href="../assets/css/style_license_model.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com/" />
-<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap"
-  rel="stylesheet"
-/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet" />
 
     <title>Featured Music | Epidemic Sound</title>
 </head>
+
 <body>
     <div class="header">
         <div class="header--logo">
@@ -25,37 +24,89 @@
         </div>
         <div class="header--menu">
             <ul class="nav_menu">
-              <li class="menu_items"><a class="active" href="index.html">Music</a></li>
-              <li class="menu_items"><a href="sound_effect.html">Sound Effects</a></li>
-              <li class="menu_items"><a href="license_model.html">License Model</a></li>
-              <li class="menu_items"><a href="pricing.html">Pricing</a></li>
-              <li class="menu_items"><a href="login.html">Log in</a></li>
-              <li class="menu_items-icon"><i class="fa-solid fa-magnifying-glass fa-lg"></i></li>
+                <li class="menu_items"><a class="active" href="index.html">Music</a></li>
+                <li class="menu_items"><a href="sound_effect.html">Sound Effects</a></li>
+                <li class="menu_items"><a href="license_model.html">License Model</a></li>
+                <li class="menu_items"><a href="pricing.html">Pricing</a></li>
+                <li class="menu_items"><a href="login.html">Log in</a></li>
+                <li class="menu_items-icon"><i class="fa-solid fa-magnifying-glass fa-lg"></i></li>
             </ul>
         </div>
         <div class="header--preimere">
-          <div class="btnPremiere">
-            <p class="txt_premiere">Start free trial</p>
-          </div>
-        </div>  
+            <div class="btnPremiere">
+                <p class="txt_premiere">Start free trial</p>
+            </div>
+        </div>
     </div>
-   <div class="bigbox">
-    <div class="box" >
-        <div class="box_item1">
-            <h1 class="box1"> Our license Model</h1>
-            <p class="box2">Epidemic Sound's definition of royalty-free music goes beyond the standard definition. We own all economic rights connected to our music and can offer a direct license.</p>
-            <button class="button">Start free trial</button>
-            <button class="button1">Our subscriptions</button>
-        </div> 
+    <div class="bigbox">
+        <div class="box">
+            <div class="box_item1">
+                <h1 class="box1"> Our license Model</h1>
+                <p class="box2">Epidemic Sound's definition of royalty-free music goes beyond the standard definition.
+                    We own all economic rights connected to our music and can offer a direct license.</p>
+                <button class="button">Start free trial</button>
+                <button class="button1">Our subscriptions</button>
+            </div>
+        </div>
+        <div class="box_item2">
+            <img src="../assets/images/images_license_model/img1.png" alt="" width="720px" height="704px">
+        </div>
     </div>
-    <div class="box_item2">
-        <img src="../assets/images/images_license_model/img1.png" alt="">
+    <div class="p2">
+        <div class="text_main">
+            <div class="text_header">
+                <h1 class="text1">GLOBALLY CLEARED MUSIC</h1>
+                <p class="text2">With our music licenses you’re free to use the music without having to worry about
+                    paying additional fees or royalties. Forget synchronisation rights, mechanical rights and public
+                    performance rights – we offer all rights included.</p>
+            </div>
+        </div>
     </div>
-</div>
-
-    
+    <div class="ask">
+        <div class="ask_item1">
+            <h2 class="ask1">What Is Royalty-Free Music?</h2>
+            <p class="ask2">
+                Royalty-free isn’t actually “free” in a monetary sense. What it means is that you don’t have to pay
+                royalties to a music creator when using their music. However, the company you buy your license from can
+                still pay royalties (from e.g. streaming) to their music creators, like Epidemic Sound does.
+            </p>
+        </div>
+        <div class="ask_item2">
+            <img src="../assets/images/images_license_model/img2.png" alt="" height="560px" width="640px">
+        </div>
+    </div>
+    <div class="p3">
+        <div class="title_list">
+            <div class="main_title">
+                <h6 class="title">
+                    Our Subscriptions
+                </h6>
+                <div class="list">
+                    <div class="list1">
+                        <div>
+                            <div>
+                                <h2>Personal</h2>
+                                <div class="font">
+                                    <p class="font1">You’re creating videos or podcasts for your own use.
+                                    </p>
+                                    <li>Covered for YouTube, Facebook, Instagram, TikTok, Twitch and podcasts</li>
+                                    <li>Add one channel per platform</li>
+                                    <li>You can have unlimited followers and views</li>
+                                    <li>Includes monetization</li>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="list2"></div>
+                    <div class="list3"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 
 
     <!-- script for all -->
 </body>
+
 </html>
