test lai sound effect

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
             </ul>
         </div>
         <div class="header--preimere">
-          <div class="btnPremiere">
+          <div class="btnPremiere" style="border-radius: 5px;">
             <p class="txt_premiere">Start free trial</p>
           </div>
         </div>  
