--- a/html/sound_effect.html
+++ b/html/sound_effect.html
@@ -1100,7 +1100,8 @@
               <span style="color: rgb(118, 118, 118);">Misc. Whooshes</span>
             </li>
             <li style="list-style: none; margin-bottom: 0.5rem;">
-              <span style="color: rgb(118, 118, 118);"><li style="list-style: none; margin-bottom: 0.5rem;">
+              <span style="color: rgb(118, 118, 118);">
+            <li style="list-style: none; margin-bottom: 0.5rem;">
               <span style="color: rgb(118, 118, 118);">Reverse Whooshes</span>
             </li></span>
             </li>
@@ -1126,6 +1127,50 @@
         </div>
 
       </div>
+      <!-- layout for end web -->
+      <div class="web_end">
+        <div class="layout1">
+          <div class="social_network">
+            <div class="social_network1">
+              <li>Music</li>
+              <li>Sound Effects</li>
+              <li>For Artists</li>
+              <li>In-Store Music</li>
+              <li>Blog</li>
+              <li>Help</li>
+            </div>
+            <div class="social_network1">
+              <li>Pricing</li>
+              <li>Enterprise</li>
+              <li>Press</li>
+              <li>Careers</li>
+              <li>Community</li>
+            </div>
+            <div class="social_network1">
+              <li>Spotify</li>
+              <li>Youtube</li>
+              <li>Instagram</li>
+              <li>Facebook</li>
+              <li>Twitter</li>
+            </div>
+          </div>
+          <div class="credit">
+            <div class="credit1">
+              <p>Copyright © Epidemic Sound</p>
+            </div>
+            <div class="credit2">
+              <li>Privacy</li>
+              <li>Genaral</li>
+              <li>Cookie</li>
+            </div>
+          </div>
+        </div>
+        <div class="layout2">
+
+        </div>
+      </div>
+
+      <!-- script for all -->
 </body>
 
 </html>
