--- a/html/login.html
+++ b/html/login.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="box_login">
                     <div class="box_inside1">
-                        <a class="item_inside1" href="#">Log in</a>
+                        <button onclick="login()">Login</button>
                     </div>
                 </div>
                 <div class="box_create_acc">
@@ -60,5 +60,7 @@
             <img src="/assets/images/images_login/img.jpg" alt="">
         </div>
     </div>
+
+    <script src="/assets/js/login.js"></script>
 </body>
 </html>
